--- a/src/components/UpButton/UpButton.css
+++ b/src/components/UpButton/UpButton.css
@@ -24,6 +24,11 @@
 
 
 
-@media screen and (max-width:660px){
-    .arrow-btn{display: none;}
+@media screen and (max-width:575px){
+    .arrow-btn{
+        bottom: 5%;
+        right: 50%;
+        transform: translateX(50%);
+    }
+
 }
